fix(multi-select): avoid new-option button overflow in multi-select

--- a/src/components/MultiSelect/style.css
+++ b/src/components/MultiSelect/style.css
@@ -138,10 +138,14 @@
     user-select: none;
 }
 
+.multi-select__options-panel__create-new-option-button-container {
+    padding-inline: 10px;
+}
 .multi-select__options-panel__create-new-option-button-container > * {
     width: 100%;
 
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 @keyframes fade-opening {
